--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "firecrawl-py>=2.9.0",
+    "langchain>=0.3.26",
     "langchain-google-genai>=2.1.5",
     "langchain-mcp-adapters>=0.1.7",
     "langchain-openai>=0.3.25",
     "langgraph>=0.4.8",
+    "pydantic>=2.11.7",
     "python-dotenv>=1.1.0",
 ]
